--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Sorting Visualizer</h1>
   <div>
     <label for="whatsort">Select Sort:</label>
-    <select name="whatsort" id="whatsort">
+    <select name="whatsort" id="whatsort" [(ngModel)]="selectedSort">
       <option value="" selected disabled>Select Sort</option>
       <option value="selection">Selection Sort</option>
       <option value="bubble">Bubble Sort</option>
@@ -10,6 +10,7 @@
       <option value="insertion">Insertion Sort</option>
       <option value="heap">Heap Sort</option>
     </select>
+
     <label for="nos" style="margin: 20px;">Number of elements</label>
     <input type="text" id="nos" [(ngModel)]="numberOfElements" />
   </div>
