--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@
   <!-- Use (click) event binding to handle button click -->
   <button (click)="init()">Display</button>
   <button (click)="play()">Sort</button>
+  <button (click)="reset()">Reset</button> <!-- Add the reset button -->
+
 
   <!-- New div to contain bars -->
 </div>
