--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -48,7 +48,7 @@
   
     /* Hover effect */
     &:hover {
-      background-color: #45a049; /* Darker green on hover */
+      background-color: #20dd2a; /* Darker green on hover */
     }
   }
   
