--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div>
     <label for="whatsort">Select Sort:</label>
     <select name="whatsort" id="whatsort" [(ngModel)]="selectedSort">
-      <option value="" selected disabled>Select Sort</option>
+      <option value="Select" selected disabled>Select Sorting Algorithm</option>
       <option value="selection">Selection Sort</option>
       <option value="bubble">Bubble Sort</option>
       <option value="merge">Merge Sort</option>
