--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <option value="selection">Selection Sort</option>
       <option value="bubble">Bubble Sort</option>
       <option value="merge">Merge Sort</option>
+      <option value="quick">Quick Sort</option>
       <option value="insertion">Insertion Sort</option>
       <option value="heap">Heap Sort</option>
     </select>
